--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -63,94 +63,98 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:id="@+id/imageViewGradient"
-            android:src="@drawable/gradient_bg"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 
     <TextView
+        android:id="@+id/song_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="This is the song Title"
-        android:id="@+id/song_name"
         android:layout_below="@+id/card"
-        android:textColor="@color/colorAccent"
-        android:gravity="center_horizontal"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:singleLine="true"
-        android:ellipsize="end"
         android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"/>
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="32dp"
+        android:ellipsize="end"
+        android:gravity="center_horizontal"
+        android:singleLine="true"
+        android:text="This is the song Title"
+        android:textColor="@color/colorAccent"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/song_artist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="This is the song Artist"
-        android:id="@+id/song_artist"
         android:layout_below="@+id/song_name"
-        android:textColor="@color/colorAccent"
-        android:gravity="center_horizontal"
-        android:textSize="16sp"
-        android:textStyle="italic"
-        android:singleLine="true"
-        android:ellipsize="end"
         android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"/>
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="40dp"
+        android:ellipsize="end"
+        android:gravity="center_horizontal"
+        android:singleLine="true"
+        android:text="This is the song Artist"
+        android:textColor="@color/colorAccent"
+        android:textSize="16sp"
+        android:textStyle="italic" />
 
     <RelativeLayout
+        android:id="@+id/relative_layout_for_bottom"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:id="@+id/relative_layout_for_bottom"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="-2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="-1dp"
         android:background="@drawable/gradient_bg">
 
         <ImageView
+            android:id="@+id/id_shuffle"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:id="@+id/id_shuffle"
-            android:src="@drawable/ic_shuffle_off"
-            android:layout_centerVertical="true"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="32dp"/>
+            android:layout_centerVertical="true"
+            android:layout_marginStart="32dp"
+            android:src="@drawable/ic_shuffle_off" />
 
         <ImageView
+            android:id="@+id/id_prev"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:id="@+id/id_prev"
-            android:src="@drawable/ic_skip_previous"
             android:layout_centerVertical="true"
+            android:layout_marginEnd="16dp"
             android:layout_toStartOf="@+id/play_pause"
-            android:layout_marginEnd="16dp"/>
+            android:src="@drawable/ic_skip_previous" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/play_pause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/play_pause"
-            android:src="@drawable/ic_play"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:clickable="true"
             android:focusable="true"
-            android:clickable="true"/>
+            android:src="@drawable/ic_play" />
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
             android:id="@+id/id_next"
-            android:src="@drawable/ic_skip_next"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/play_pause"
-            android:layout_marginStart="16dp"/>
-
-        <ImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:id="@+id/id_repeat"
-            android:src="@drawable/ic_repeat_off"
             android:layout_centerVertical="true"
+            android:layout_marginStart="16dp"
+            android:layout_toEndOf="@+id/play_pause"
+            android:src="@drawable/ic_skip_next" />
+
+        <ImageView
+            android:id="@+id/id_repeat"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="32dp"/>
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="32dp"
+            android:src="@drawable/ic_repeat_off" />
     </RelativeLayout>
 
     <RelativeLayout
