Im in need of Help.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#1B1A1C</color>
     <color name="colorPrimaryDark">#151515</color>
     <color name="colorAccent">#FFFFFF</color>
+    <color name="Color" />
 </resources>
